force-app/main/default/objects/Task_Reminder__c/Task_Reminder__c.object-meta.xml
<CustomObject>
    <label>Task Reminder</label>
    <nameField>
        <displayFormat>TR-{000000}</displayFormat>
        <label>Task Reminder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>