force-app/main/default/objects/Task_Reminder__c/fields/Recipient_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Recipient_User_ID__c</fullName>
    <label>Recipient User ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>