force-app/main/default/objects/Task_Reminder__c/fields/Reminder_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Date_Time__c</fullName>
    <label>Reminder Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>