force-app/main/default/objects/Task_Reminder__c/fields/Reminder_Status__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Status__c</fullName>
    <formula>IF(
    Is_Sent__c,
    &quot;Sent&quot;,
    IF(
        Reminder_Date_Time__c &lt;= NOW(),
        &quot;Ready to Send&quot;,
        &quot;Pending&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reminder Status</label>
    <type>Text</type>
</CustomField>