force-app/main/default/objects/Task_Reminder__c/fields/Reminder_Type__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Type__c</fullName>
    <label>Reminder Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>180 Days Before</fullName>
            </value>
            <value>
                <fullName>90 Days Before</fullName>
            </value>
            <value>
                <fullName>60 Days Before</fullName>
            </value>
            <value>
                <fullName>45 Days Before</fullName>
            </value>
            <value>
                <fullName>30 Days Before</fullName>
            </value>
            <value>
                <fullName>15 Days Before</fullName>
            </value>
            <value>
                <fullName>10 Days Before</fullName>
            </value>
            <value>
                <fullName>7 Days Before</fullName>
            </value>
            <value>
                <fullName>5 Days Before</fullName>
            </value>
            <value>
                <fullName>4 Days Before</fullName>
            </value>
            <value>
                <fullName>3 Days Before</fullName>
            </value>
            <value>
                <fullName>2 Days Before</fullName>
            </value>
            <value>
                <fullName>1 Day Before</fullName>
            </value>
            <value>
                <fullName>1 Week Before</fullName>
                <isActive>false</isActive>
                <label>1 Week Before</label>
            </value>
            <value>
                <fullName>10:00 AM Day Of</fullName>
                <isActive>false</isActive>
                <label>10:00 AM Day Of</label>
            </value>
            <value>
                <fullName>11:00 AM Day Of</fullName>
                <isActive>false</isActive>
                <label>11:00 AM Day Of</label>
            </value>
            <value>
                <fullName>12:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>12:00 PM Day Of</label>
            </value>
            <value>
                <fullName>1:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>1:00 PM Day Of</label>
            </value>
            <value>
                <fullName>2:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>2:00 PM Day Of</label>
            </value>
            <value>
                <fullName>3:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>3:00 PM Day Of</label>
            </value>
            <value>
                <fullName>4:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>4:00 PM Day Of</label>
            </value>
            <value>
                <fullName>5:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>5:00 PM Day Of</label>
            </value>
            <value>
                <fullName>6 Days Before</fullName>
                <isActive>false</isActive>
                <label>6 Days Before</label>
            </value>
            <value>
                <fullName>6:00 AM Day Of</fullName>
                <isActive>false</isActive>
                <label>6:00 AM Day Of</label>
            </value>
            <value>
                <fullName>6:00 PM Day Of</fullName>
                <isActive>false</isActive>
                <label>6:00 PM Day Of</label>
            </value>
            <value>
                <fullName>7:00 AM Day Of</fullName>
                <isActive>false</isActive>
                <label>7:00 AM Day Of</label>
            </value>
            <value>
                <fullName>8:00 AM Day Of</fullName>
                <isActive>false</isActive>
                <label>8:00 AM Day Of</label>
            </value>
            <value>
                <fullName>9:00 AM Day Of</fullName>
                <isActive>false</isActive>
                <label>9:00 AM Day Of</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>