force-app/main/default/objects/Task_Reminder__c/fields/Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_ID__c</fullName>
    <label>Task ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>