force-app/main/default/objects/Task_Reminder__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Task_ID__c</columns>
    <columns>Task_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Recipient_User_ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Reminder_Date_Time__c</columns>
    <columns>Reminder_Status__c</columns>
    <columns>Reminder_Type__c</columns>
    <columns>Sent_Date_Time__c</columns>
    <columns>Is_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>